[package]
authors = ["Embassy project contributors"]
description = "Bluetooth HCI data types"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bt-hci"
repository = "https://github.com/embassy-rs/bt-hci"
version = "0.3.3"
documentation = "https://docs.rs/bt-hci"
keywords = ["bluetooth", "hci", "BLE"]
categories = ["embedded", "hardware-support", "no-std"]
rust-version = "1.77"
exclude = [
    ".github",
    ".vscode",
    "ci.sh",
    "rust-toolchain.toml",
    "rustfmt.toml",
    "update_uuids",
]

[features]
defmt = ["dep:defmt", "embedded-io/defmt-03", "embedded-io-async/defmt-03"]
serde = ["dep:serde"]

[dependencies]
defmt = { version = "^1", optional = true }
log = { version = "^0.4", optional = true }
embedded-io = "0.6.0"
embedded-io-async = "0.6.0"
embassy-sync = "0.7"
embassy-time = { version = ">=0.3, <0.5", optional = true }
heapless = "0.8"
futures-intrusive = { version = "0.5.0", default-features = false }
uuid = { version = "^1", default-features = false, optional = true }
serde = { version = "^1", optional = true, features = [
    "derive",
], default-features = false }

[dev-dependencies]
postcard = "1.1"

[workspace]
members = ["update_uuids"]
