[package]
authors = ["Embassy project contributors"]
description = "Bluetooth HCI data types"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bt-hci"
repository = "https://github.com/embassy-rs/bt-hci"
version = "0.6.0"
documentation = "https://docs.rs/bt-hci"
keywords = ["bluetooth", "hci", "BLE"]
categories = ["embedded", "hardware-support", "no-std"]
rust-version = "1.87"
exclude = [".github", ".vscode", "ci.sh", "rust-toolchain.toml", "rustfmt.toml"]

[features]
defmt = [
    "dep:defmt",
    "embedded-io/defmt-03",
    "embedded-io-async/defmt-03",
    "btuuid/defmt",
]
serde = ["dep:serde", "btuuid/serde"]
uuid = ["btuuid/uuid"]

[dependencies]
btuuid = { version = "0.1.0" }
defmt = { version = "^1", optional = true }
log = { version = "^0.4", optional = true }
embedded-io = "0.6.0"
embedded-io-async = "0.6.0"
embassy-sync = "0.7"
embassy-time = { version = ">=0.3, <0.6", optional = true }
heapless = ">=0.8, <0.10"
futures-intrusive = { version = "0.5.0", default-features = false }
serde = { version = "^1", optional = true, features = [
    "derive",
], default-features = false }

[dev-dependencies]
postcard = "1.1"
futures-test = "0.3"
