[package]
authors = ["Embassy project contributors"]
description = "Transport trait for Bluetooth HCI"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bt-hci-driver"
repository = "https://github.com/embassy-rs/bt-hci"
version = "0.1.0"
documentation = "https://docs.rs/bt-hci-driver"
keywords = ["bluetooth", "hci", "BLE"]
categories = ["embedded", "hardware-support", "no-std"]
rust-version = "1.87"
exclude = [".github", ".vscode", "ci.sh", "rust-toolchain.toml", "rustfmt.toml"]

[features]
defmt = [
    "dep:defmt",
    "embedded-io/defmt",
    "embedded-io-async/defmt",
]

[dependencies]
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"

defmt = { version = "^1", optional = true }
log = { version = "^0.4", optional = true }
